--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Your Name | Engineer</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Your Name</h1>
+    <p>Mechanical / Software / Electrical Engineer</p>
+  </header>
 
+  <section>
+    <h2>About Me</h2>
+    <p>Write a short bio here. What kind of engineer are you? What do you build?</p>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Robot Arm:</strong> Designed and built a 3-axis robotic arm using Arduino and SolidWorks.</li>
+      <li><strong>CAD Model Library:</strong> 3D printed prototypes for client testing using Fusion 360.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>Email: you@example.com | <a href="https://www.linkedin.com/in/yourname">LinkedIn</a></p>
+  </section>
+</body>
+</html>
