--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Preston Brumley | Propulsion Design Engineer</title>
+  <title>Preston Brumley | Propulsion Systems Design Engineer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Mechanical / Software / Electrical Engineer</p>
+    <h1>Preston Brumley</h1>
+    <p>Mechanical Engineer</p>
   </header>
 
   <section>
