--- a/index.html
+++ b/index.html
@@ -2,31 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Preston Brumley | Propulsion Systems Design Engineer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name | Engineer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Preston Brumley</h1>
-    <p>Mechanical Engineer</p>
+    <h1>Your Name</h1>
+    <p class="tagline">Mechanical Engineer • CAD Specialist • Problem Solver</p>
   </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>Write a short bio here. What kind of engineer are you? What do you build?</p>
-  </section>
+  <main>
+    <section class="about">
+      <h2>About Me</h2>
+      <p>I’m a hands-on engineer with a passion for prototyping, CAD modeling, and building functional systems. I enjoy turning complex challenges into elegant technical solutions.</p>
+    </section>
 
-  <section>
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Robot Arm:</strong> Designed and built a 3-axis robotic arm using Arduino and SolidWorks.</li>
-      <li><strong>CAD Model Library:</strong> 3D printed prototypes for client testing using Fusion 360.</li>
-    </ul>
-  </section>
+    <section class="projects">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>⚙️ Robotic Arm</h3>
+        <p>Designed a 3DOF robotic arm in Fusion 360 and programmed control logic with Arduino. Final build achieved 98% precision in repeatability testing.</p>
+      </div>
+      <div class="project">
+        <h3>🛰 Satellite Data Dashboard</h3>
+        <p>Built a real-time data dashboard using Python, Plotly, and NASA APIs to visualize orbital mechanics and telemetry.</p>
+      </div>
+    </section>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: you@example.com | <a href="https://www.linkedin.com/in/yourname">LinkedIn</a></p>
-  </section>
+    <section class="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
+      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Your Name. All rights reserved.</p>
+  </footer>
 </body>
 </html>
