--- a/index.html
+++ b/index.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name | Engineer</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Name | Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+
   <header>
     <h1>Your Name</h1>
-    <p class="tagline">Mechanical Engineer • CAD Specialist • Problem Solver</p>
+    <p class="tagline">Design-focused Engineer | CAD + Code + Vision</p>
   </header>
 
   <main>
     <section class="about">
       <h2>About Me</h2>
-      <p>I’m a hands-on engineer with a passion for prototyping, CAD modeling, and building functional systems. I enjoy turning complex challenges into elegant technical solutions.</p>
+      <p>I build elegant engineering solutions for complex problems. My work spans digital design, mechanical systems, and software automation.</p>
     </section>
 
     <section class="projects">
       <h2>Projects</h2>
+
       <div class="project">
-        <h3>⚙️ Robotic Arm</h3>
-        <p>Designed a 3DOF robotic arm in Fusion 360 and programmed control logic with Arduino. Final build achieved 98% precision in repeatability testing.</p>
+        <h3>⚙️ Precision Robotic Arm</h3>
+        <p>CAD-designed and prototyped a robotic arm using Fusion 360 and Arduino. Controlled via PID for smooth real-time articulation.</p>
       </div>
+
       <div class="project">
-        <h3>🛰 Satellite Data Dashboard</h3>
-        <p>Built a real-time data dashboard using Python, Plotly, and NASA APIs to visualize orbital mechanics and telemetry.</p>
+        <h3>📡 Satellite Tracker</h3>
+        <p>Live data dashboard visualizing orbital positions using NASA APIs. Built with Python, Dash, and WebGL graphics.</p>
       </div>
     </section>
 
     <section class="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
-      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></p>
+      <p><a href="mailto:you@email.com">you@email.com</a></p>
+      <p><a href="https://github.com/yourusername">GitHub</a></p>
+      <p><a href="https://linkedin.com/in/yourusername">LinkedIn</a></p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Your Name. Built with clean code & dark pixels.</p>
   </footer>
+
 </body>
 </html>
