--- a/index.html
+++ b/index.html
@@ -3,46 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>Your Name | Engineer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <header>
     <h1>Your Name</h1>
-    <p class="tagline">Design-focused Engineer | CAD + Code + Vision</p>
+    <p class="tagline">Engineer • Builder • Problem Solver</p>
   </header>
 
   <main>
     <section class="about">
-      <h2>About Me</h2>
-      <p>I build elegant engineering solutions for complex problems. My work spans digital design, mechanical systems, and software automation.</p>
+      <h2>About</h2>
+      <p>I design and build modern engineering systems — combining software, hardware, and creativity. My work spans robotics, mechanical design, and real-time data tools.</p>
     </section>
 
     <section class="projects">
-      <h2>Projects</h2>
+      <h2>Featured Projects</h2>
 
       <div class="project">
-        <h3>⚙️ Precision Robotic Arm</h3>
-        <p>CAD-designed and prototyped a robotic arm using Fusion 360 and Arduino. Controlled via PID for smooth real-time articulation.</p>
+        <h3>⚙️ Robotic Arm Control</h3>
+        <p>Designed and built a 3DOF robotic arm with PID feedback using Arduino + Fusion 360. Achieved 98% positioning accuracy.</p>
       </div>
 
       <div class="project">
-        <h3>📡 Satellite Tracker</h3>
-        <p>Live data dashboard visualizing orbital positions using NASA APIs. Built with Python, Dash, and WebGL graphics.</p>
+        <h3>📊 Satellite Telemetry Dashboard</h3>
+        <p>Live dashboard for satellite positioning using NASA APIs and Python/Plotly. Used by students to visualize orbital mechanics in real time.</p>
       </div>
     </section>
 
     <section class="contact">
-      <h2>Contact</h2>
+      <h2>Get in Touch</h2>
       <p><a href="mailto:you@email.com">you@email.com</a></p>
-      <p><a href="https://github.com/yourusername">GitHub</a></p>
-      <p><a href="https://linkedin.com/in/yourusername">LinkedIn</a></p>
+      <p><a href="https://github.com/yourusername" target="_blank">GitHub</a></p>
+      <p><a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a></p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Your Name. Built with clean code & dark pixels.</p>
+    <p>&copy; 2025 Your Name. Built in dark mode with love.</p>
   </footer>
 
 </body>
