--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <p class="tagline">Engineer • Builder • Problem Solver</p>
   </header>
 
+  <body>
+  <div class="sidebar">
+    <!-- nav here -->
+  </div>
+  
   <main>
     <section class="about fade-in">
       <h2>About</h2>
