--- a/index.html
+++ b/index.html
@@ -8,10 +8,39 @@
 </head>
 <body>
 
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Your Name | Rocket Scientist</title>
+
+  <!-- Orbitron font for sci-fi vibe -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <!-- Starfield Canvas -->
+  <canvas id="starfield"></canvas>
+
   <header>
-    <h1>Your Name</h1>
-    <p class="tagline">Engineer • Builder • Problem Solver</p>
+    <img src="assets/rocket-launch.gif" alt="Rocket Launch" class="header-gif" />
+    <h1 class="glow">Your Name</h1>
+    <p class="tagline typewriter">Rocket Scientist • Space Systems Engineer • Explorer</p>
   </header>
+
+  <main>
+    <!-- Your content here -->
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Your Name. Built with cosmic love. 🚀</p>
+  </footer>
+
+  <script src="starfield.js"></script>
+</body>
+</html>
 
   <body>
   <div class="sidebar">
