--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Your Name. Built with cosmic love. 🚀</p>
+    <p>&copy; 2025 Your Name.</p>
   </footer>
 
   <script src="starfield.js"></script>
