--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
   <!-- Starfield Canvas -->
   <canvas id="starfield"></canvas>
 
-  <header>
-    <img src="assets/rocket-launch.gif" alt="Rocket Launch" class="header-gif" />
-    <h1 class="glow">Your Name</h1>
-    <p class="tagline typewriter">Rocket Scientist • Space Systems Engineer • Explorer</p>
-  </header>
+<header>
+  <h1 class="glow">Your Name</h1>
+  <p class="tagline typewriter">Rocket Scientist • Space Systems Engineer • Explorer</p>
+
+  <div class="header-video-wrapper">
+    <iframe
+      src="https://www.youtube.com/embed/u3j3kpvX-g4"
+      title="NASA SLS Artemis I Launch"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
+</header>
+
 
   <main>
     <!-- Your content here -->
