--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 </head>
 <body>
 
-  <!-- Starfield Canvas -->
-  <canvas id="starfield"></canvas>
+
 
 <header>
   <h1 class="glow">Your Name</h1>
@@ -30,7 +29,7 @@
 
   <div class="header-video-wrapper">
     <iframe
-      src="https://www.youtube.com/embed/u3j3kpvX-g4"
+      src="https://www.youtube.com/watch?v=zctTKdQcmVA&list=RDzctTKdQcmVA&start_radio=1"
       title="NASA SLS Artemis I Launch"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
